--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <!-- Edit this list as you add new HTML files -->
     <li><a href="C1Q1.html">MAN Chapter 1 Quiz 1 (theory) </a></li>
     <li><a href="C1Q2.html">MAN Chapter 1 Quiz 1 (calculations) </a></li>
+    <li><a href="C2Q.html">MAN Chapter 2 Quiz (theory + calc) </a></li>
   </ul>
 
 </body>
