--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <li><a href="C1Q1.html">MAN Chapter 1 Quiz 1 (theory) </a></li>
     <li><a href="C1Q2.html">MAN Chapter 1 Quiz 1 (calculations) </a></li>
     <li><a href="C2Q.html">MAN Chapter 2 Quiz (theory + calc) </a></li>
+    <li><a href="C3Q.html">MAN Chapter 3 Quiz (theory + calc) </a></li>
+    <li><a href="C4Q.html">MAN Chapter 4 Quiz (theory + calc) </a></li>
   </ul>
 
 </body>
