--- a/index.html
+++ b/index.html
@@ -45,6 +45,21 @@
     <li><a href="C2Q.html">MAN Chapter 2 Quiz (theory + calc) </a></li>
     <li><a href="C3Q.html">MAN Chapter 3 Quiz (theory + calc) </a></li>
     <li><a href="C4Q.html">MAN Chapter 4 Quiz (theory + calc) </a></li>
+
+  </ul>
+
+  <h6>ICH</h6>
+  <ul>
+
+    <li><a href="Ich1.html">ICH Chapter 1 Quiz </a></li>
+    <li><a href="Ich2.html">ICH Chapter 2 Quiz </a></li>
+    <li><a href="Ich3.html">ICH Chapter 3 Quiz </a></li>
+    <li><a href="Ich4.html">ICH Chapter 4 Quiz </a></li>
+    <li><a href="Ich5.html">ICH Chapter 5 Quiz </a></li>
+    <li><a href="Ich6.html">ICH Chapter 6 Quiz </a></li>
+    <li><a href="Ich7.html">ICH Chapter 7 Quiz </a></li>
+    <li><a href="Ichc.html">ICH Chapter Combined Quiz  </a></li>
+    
   </ul>
 
 </body>
