--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
 
   </ul>
 
-  <h6>ICH</h6>
+  <h3>ICH</h3>
   <ul>
 
-    <li><a href="Ich1.html">ICH Chapter 1 Quiz </a></li>
-    <li><a href="Ich2.html">ICH Chapter 2 Quiz </a></li>
-    <li><a href="Ich3.html">ICH Chapter 3 Quiz </a></li>
-    <li><a href="Ich4.html">ICH Chapter 4 Quiz </a></li>
-    <li><a href="Ich5.html">ICH Chapter 5 Quiz </a></li>
-    <li><a href="Ich6.html">ICH Chapter 6 Quiz </a></li>
-    <li><a href="Ich7.html">ICH Chapter 7 Quiz </a></li>
-    <li><a href="Ichc.html">ICH Chapter Combined Quiz  </a></li>
+    <li><a href="ich1.html">ICH Chapter 1 Quiz </a></li>
+    <li><a href="ich2.html">ICH Chapter 2 Quiz </a></li>
+    <li><a href="ich3.html">ICH Chapter 3 Quiz </a></li>
+    <li><a href="ich4.html">ICH Chapter 4 Quiz </a></li>
+    <li><a href="ich5.html">ICH Chapter 5 Quiz </a></li>
+    <li><a href="ich6.html">ICH Chapter 6 Quiz </a></li>
+    <li><a href="ich7.html">ICH Chapter 7 Quiz </a></li>
+    <li><a href="ichc.html">ICH Chapter Combined Quiz  </a></li>
     
   </ul>
 
